--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-midnight
 title: Ravi's Page
 description: A work in progress portfolio. Thanks for checking it out!
