--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: Ravi's Page
+title: Ravi's Public Git
 description: A work in progress portfolio. Thanks for checking it out!
